--- a/index.html
+++ b/index.html
@@ -15,5 +15,38 @@
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
+        </div class="header">
+
+        <div class="body">
+            <div class="hero">
+            <div style="color: #F9FAF8; font-size: 48px; font-weight: extra-bold;">This website is awesome</div>
+            <div style="color: #E5E7EB; font-size: 18px;">This website has some subtext that goes here under the main
+                title. It's a smaller font and the color is lower contrast.</div>
+            <button style="width: 100px; background-color: #3882F6; border-radius: 5px;">Sign up</button>
+            </div>
+            <img src= "https://images.pexels.com/photos/17900123/pexels-photo-17900123/free-photo-of-scenic-landscape-of-a-mountain-lake.jpeg?auto=compress&cs=tinysrgb&w=1600&lazy=load" alt="image" class="responsive">
+        </div class="body">
+
+            <div class="header2">
+            <div style="font-weight:bolder ; font-size: 32px; color:#1F2937;">Some random information.</div>
+            </div>
+     <div class="info">
+            <div class="card">
+                <img src="https://cdn.pixabay.com/photo/2023/08/07/21/37/mountains-8175997_640.png" alt="mountains">
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <img src="https://cdn.pixabay.com/photo/2023/08/07/21/37/mountains-8175997_640.png" alt="mountains">
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <img src="https://cdn.pixabay.com/photo/2023/08/07/21/37/mountains-8175997_640.png" alt="mountains">
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <img src="https://cdn.pixabay.com/photo/2023/08/07/21/37/mountains-8175997_640.png" alt="mountains">
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+        </div class="info">
     </body>
 </html>
