--- a/index.html
+++ b/index.html
@@ -48,5 +48,9 @@
                 <div>this is some subtext under an illustration or image</div>
             </div>
         </div class="info">
+        <div class="quote">
+            <div style="font-size: 36px; font-style: italic; color: #1F2937;"> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div style="font-weight: bolder;" class="Thor">-Thor, God of Thunder</div>
+        </div>
     </body>
 </html>
