--- a/index.html
+++ b/index.html
@@ -52,5 +52,17 @@
             <div style="font-size: 36px; font-style: italic; color: #1F2937;"> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
         <div style="font-weight: bolder;" class="Thor">-Thor, God of Thunder</div>
         </div>
+        <div class="modul">
+            <div class="words">
+            <div style="color: #F9FAF8; font-size: 24px; font-weight: bold;">Call to action! It's time!</div>
+            <div style="color: #F9FAF8; font-size: 14px;">sign up for our product by clicking that button right over there!</div>
+            </div>
+            <div class="button">
+                <button style="background-color: #3882F6; width: 100px; border-radius: 5px; border-color: #F9FAF8; color: #F9FAF8;">Sign up!</button>
+            </div>
+            </div>
+        <div class="footer" style="color: #F9FAF8;">
+            Copyright @ The Odin Project 2021
+        </div>
     </body>
 </html>
